--- a/HTML, CSS, and Javascript for Web Developers/Coursera Module Assignments/Module 3 Coding Assignment/index.html
+++ b/HTML, CSS, and Javascript for Web Developers/Coursera Module Assignments/Module 3 Coding Assignment/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="C:\Users\DELL\Documents\GitHub\IAmPrabhakar.github.io\HTML, CSS, and Javascript for Web Developers\Coursera Module Assignments\Module 3 Coding Assignment\css\style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
